# src/routes/v1/modules/auth/auth.routes.ts
@@ -1,7 +1,7 @@
 import AuthController from '@/controllers/v1/modules/auth/auth.controller';
 import { authMiddleware } from '@/middlewares/auth/auth.middlewares';
 import { validateRequest } from '@/middlewares/validation/validate-request.middlewares';
-import { loginSchema, registerSchema, resetPasswordSchema, changePasswordSchema } from '@/validations/v1/modules/auth.validations';
+import { loginSchema, registerSchema, resetPasswordSchema, changePasswordSchema, updateUserSchema } from '@/validations/v1/modules/auth.validations';
 import { Router } from 'express';
 
 const router: Router = Router();
@@ -15,5 +15,7 @@ router.get('/me', authMiddleware, AuthController.me);
 router.post('/reset-password', validateRequest(resetPasswordSchema), AuthController.resetPassword);
 
 router.put('/change-password', authMiddleware, validateRequest(changePasswordSchema), AuthController.changePassword);
+
+router.put('/profile', authMiddleware, validateRequest(updateUserSchema), AuthController.updateUser);
 
 export default router;
